--- a/01-first-azure-pipeline.yml
+++ b/01-first-azure-pipeline.yml
@@ -21,6 +21,19 @@ jobs:
           echo See https://aka.ms/yaml
         displayName: "Run a multi-line script"
   - job: Job2
+    dependsOn: Job1 # sekwencyjne wykonanie
     steps:
       - script: echo Job2!
+        displayName: "Run a one-line script"
+  - job: Job3
+    dependsOn: Job2
+    steps:
+      - script: echo Job3!
+        displayName: "Run a one-line script"
+  - job: Job4
+    dependsOn:
+      - Job2
+      - Job3
+    steps:
+      - script: echo Job3!
         displayName: "Run a one-line script"
