--- a/02-stages-azure-pipelines.yml
+++ b/02-stages-azure-pipelines.yml
@@ -1,34 +1,38 @@
 trigger:
-- main
+  - main
 
 pool:
   vmImage: ubuntu-latest
 
 stages:
-- stage: Build
-  jobs:
-  - job: FirstJob
-    steps:
-    - bash: echo Build FirstJob
-  - job: SecondJob
-    steps:
-    - bash: echo Build SecondJob
+  - stage: Build
+    jobs:
+      - job: FirstJob
+        steps:
+          - bash: echo Build FirstJob
+      - job: SecondJob
+        steps:
+          - bash: echo Build SecondJob
 
-- stage: DevDeploy
-  jobs:
-  - job: DevDeployJob
-    steps:
-    - bash: echo DevDeployJob
+  - stage: DevDeploy
+    dependsOn: Build # dzięki temu możemy zrównoleglić pracę stagy w danych sytuacjach
+    jobs:
+      - job: DevDeployJob
+        steps:
+          - bash: echo DevDeployJob
 
-- stage: QADeploy
-  jobs:
-  - job: QADeployJob
-    steps:
-    - bash: echo QADeployJob
+  - stage: QADeploy
+    dependsOn: Build # nie musi czekać na wykonanie stage'a DevDeploy
+    jobs:
+      - job: QADeployJob
+        steps:
+          - bash: echo QADeployJob
 
-- stage: ProdDeploy
-  jobs:
-  - job: ProdDeployJob
-    steps:
-    - bash: echo ProdDeployJob
-
+  - stage: ProdDeploy
+    dependsOn: # musi poczekać aż stage QADeploy i DevDeploy zostaną zakończone
+      - QADeploy
+      - DevDeploy
+    jobs:
+      - job: ProdDeployJob
+        steps:
+          - bash: echo ProdDeployJob
