--- a/02-stages-azure-pipelines.yml
+++ b/02-stages-azure-pipelines.yml
@@ -10,6 +10,7 @@ stages:
       - job: FirstJob
         steps:
           - bash: echo Build FirstJob
+          - bash: echo ${PipelineVariable}
       - job: SecondJob
         steps:
           - bash: echo Build SecondJob
