--- a/02-stages-azure-pipelines.yml
+++ b/02-stages-azure-pipelines.yml
@@ -16,18 +16,23 @@ stages:
           - bash: echo Build SecondJob
 
   - stage: DevDeploy
+    variables: # zmienna na poziomie stagu (w tym scopie można ją używać)
+      environment: dev # NAZWA_ZMIENNEJ: WARTOSC
     dependsOn: Build # dzięki temu możemy zrównoleglić pracę stagy w danych sytuacjach
     jobs:
       - job: DevDeployJob
         steps:
           - bash: echo DevDeployJob
+          - bash: echo This is a ${environment} environment
 
   - stage: QADeploy
+    variables:
+      environment: QA
     dependsOn: Build # nie musi czekać na wykonanie stage'a DevDeploy
     jobs:
       - job: QADeployJob
         steps:
-          - bash: echo QADeployJob
+          - bash: echo ${environment}DeployJob
 
   - stage: ProdDeploy
     dependsOn: # musi poczekać aż stage QADeploy i DevDeploy zostaną zakończone
