--- a/02-stages-azure-pipelines.yml
+++ b/02-stages-azure-pipelines.yml
@@ -28,7 +28,11 @@ stages:
                 **/*.yml
                 **/*.tf
               TargetFolder: '$(Build.ArtifactStagingDirectory)'
-
+          - task: PublishBuildArtifacts@1
+            inputs:
+              PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+              ArtifactName: 'drop'
+              publishLocation: 'Container'
 
       # - job: SecondJob
       #   steps:
