Testing approval set

--- a/03-strategy-environment-azure-pipelines.yml
+++ b/03-strategy-environment-azure-pipelines.yml
@@ -32,7 +32,7 @@ stages:
         runOnce: # wszystko uruchamiamy naraz
           deploy:
             steps:
-              - script: echo Deploy to Dev
+              - script: echo Deploy to Dev 1
 
   - stage: QADeploy
     jobs:
