Hotfix - Invalid storage name - Azure Kubernetes IAAC - v.1.0.1

--- a/05-kubernetes-cluster-iaac-azure-pipelines.yml
+++ b/05-kubernetes-cluster-iaac-azure-pipelines.yml
@@ -25,7 +25,7 @@ steps:
     ensureBackend: true
     backendAzureRmResourceGroupName: 'terraform-backend-resource-group'
     backendAzureRmResourceGroupLocation: 'westeurope'
-    backendAzureRmStorageAccountName: 'storageAGEP'
-    backendAzureRmContainerName: 'storageAGEPcontainer'
+    backendAzureRmStorageAccountName: 'storageagep'
+    backendAzureRmContainerName: 'storageagepcontainer'
     backendAzureRmKey: 'kubernetes-dev.tfstate'
     allowTelemetryCollection: true
