--- a/05-kubernetes-cluster-iaac-azure-pipelines.yml
+++ b/05-kubernetes-cluster-iaac-azure-pipelines.yml
@@ -29,3 +29,11 @@ steps:
     backendAzureRmContainerName: 'storageagepcontainer'
     backendAzureRmKey: 'kubernetes-dev.tfstate'
     allowTelemetryCollection: true
+
+- task: TerraformCLI@0
+  inputs:
+    command: 'apply'
+    workingDirectory: '$(System.DefaultWorkingDirectory)/configuration/iaac/azure/kubernetes'
+    environmentServiceName: 'azure-resource-manager-service-connection'
+    commandOptions: '-var client_id=$(client_id) -var client_secret=$(client_secret) -var ssh_public_key=$(ssh_public_key)'
+    allowTelemetryCollection: false
