Destroying EKS AWS K8S Cluster

--- a/07-aws-kubernetes-cluster-iaac-azure-pipeline.yml
+++ b/07-aws-kubernetes-cluster-iaac-azure-pipeline.yml
@@ -24,3 +24,12 @@ steps:
     command: 'apply'
     workingDirectory: '$(System.DefaultWorkingDirectory)/configuration/iaac/aws/kubernetes'
     environmentServiceNameAWS: 'aws-for-terraform'
+  
+# OPTIONAL
+# DESTROYING TO SAVE MONEY
+- task: TerraformTaskV4@4
+  inputs:
+    provider: 'aws'
+    command: 'destroy'
+    workingDirectory: '$(System.DefaultWorkingDirectory)/configuration/iaac/aws/kubernetes'
+    environmentServiceNameAWS: 'aws-for-terraform'
